-lots of random work done, but need to submit to app contest (IN CASE OF VIDEO PLAYBACK ERROR IN FEED, LOOK HERE)

--- a/Museek/Main/Feed/HomeFeed.storyboard
+++ b/Museek/Main/Feed/HomeFeed.storyboard
@@ -52,7 +52,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="separatorColor" name="AppAccent"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostingCell" rowHeight="450" id="wXj-du-pJW" customClass="HomeFeedCell" customModule="Museek" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="PostingCell" rowHeight="450" id="wXj-du-pJW" customClass="HomeFeedCell" customModule="Museek" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="450"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wXj-du-pJW" id="Tnv-9K-0S8">
@@ -222,7 +222,6 @@
                                     <outlet property="userName" destination="mZd-Fe-MWf" id="Ud8-I7-YpS"/>
                                     <outlet property="videoThumbnail" destination="anS-35-NLk" id="ZnS-cE-Ss4"/>
                                     <outlet property="videoView" destination="KyR-oj-vWf" id="Rfp-CX-owh"/>
-                                    <outlet property="videoViewRatio" destination="NHl-Vc-kgy" id="brQ-9T-dLs"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -237,19 +236,6 @@
             </objects>
             <point key="canvasLocation" x="-2664.8000000000002" y="1344.0886699507389"/>
         </scene>
-        <!--AV Player View Controller-->
-        <scene sceneID="g3F-UL-z0t">
-            <objects>
-                <avPlayerViewController storyboardIdentifier="videoPlayerVC" videoGravity="AVLayerVideoGravityResizeAspect" id="IuQ-hm-8mr" sceneMemberID="viewController">
-                    <nil key="simulatedTopBarMetrics"/>
-                    <nil key="simulatedBottomBarMetrics"/>
-                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="375" height="210"/>
-                </avPlayerViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="mAM-ty-nve" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-2017" y="1249"/>
-        </scene>
     </scenes>
     <resources>
         <image name="comment" width="22" height="22"/>
@@ -260,12 +246,6 @@
         <image name="stage (filled)" width="25" height="25"/>
         <namedColor name="AppAccent">
             <color red="0.92941176470588238" green="0.40392156862745099" blue="0.52549019607843139" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-        </namedColor>
-        <namedColor name="AppMain">
-            <color red="0.40799999237060547" green="0.40799999237060547" blue="0.40799999237060547" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="AppMain">
-            <color red="0.40799999240000001" green="0.40799999240000001" blue="0.40799999240000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="AppMain">
             <color red="0.40799999237060547" green="0.40799999237060547" blue="0.40799999237060547" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
