--- a/Museek/Main/Profile/Profile.storyboard
+++ b/Museek/Main/Profile/Profile.storyboard
@@ -5,37 +5,182 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--[Username]-->
+        <!--ProfileVC-->
         <scene sceneID="Fns-Mh-voW">
             <objects>
                 <viewController id="8g0-E8-Vab" customClass="ProfileVC" customModule="Museek" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="eG6-sp-Eil">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="9P2-K2-LSr">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="rjG-8E-Bw0">
+                                    <size key="itemSize" width="374" height="153"/>
+                                    <size key="headerReferenceSize" width="50" height="245"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="VideoCell" id="RZw-yJ-s6f">
+                                        <rect key="frame" x="0.66666666666666663" y="245" width="374" height="153"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="153"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProfileHeaderCollectionReusableView" id="72A-Kq-f7J" customClass="ProfileHeaderCollectionReusableView" customModule="Museek" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="245"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="vRT-N3-PQf">
+                                            <rect key="frame" x="257" y="74" width="94.333333333333314" height="46.333333333333343"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="fId-pl-NEa">
+                                                    <rect key="frame" x="41.666666666666686" y="0.0" width="11.333333333333336" height="24"/>
+                                                    <attributedString key="attributedText">
+                                                        <fragment content="0">
+                                                            <attributes>
+                                                                <font key="NSFont" size="20" name="HelveticaNeue-Medium"/>
+                                                                <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="truncatingTail" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                            </attributes>
+                                                        </fragment>
+                                                    </attributedString>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="uWo-uZ-jxJ">
+                                                    <rect key="frame" x="0.0" y="24" width="94.333333333333329" height="22.333333333333329"/>
+                                                    <attributedString key="attributedText">
+                                                        <fragment content="Supporting">
+                                                            <attributes>
+                                                                <font key="NSFont" size="19" name="HelveticaNeue"/>
+                                                                <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="truncatingTail" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                            </attributes>
+                                                        </fragment>
+                                                    </attributedString>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="iG8-nA-0QG">
+                                            <rect key="frame" x="22.333333333333336" y="74" width="94.666666666666657" height="46.333333333333343"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="PS1-v5-kg2">
+                                                    <rect key="frame" x="41.666666666666671" y="0.0" width="11.333333333333336" height="24"/>
+                                                    <attributedString key="attributedText">
+                                                        <fragment content="0">
+                                                            <attributes>
+                                                                <font key="NSFont" size="20" name="HelveticaNeue-Medium"/>
+                                                                <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="truncatingTail" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                            </attributes>
+                                                        </fragment>
+                                                    </attributedString>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="HB2-Un-Tf2">
+                                                    <rect key="frame" x="0.0" y="24" width="94.666666666666671" height="22.333333333333329"/>
+                                                    <attributedString key="attributedText">
+                                                        <fragment content="Supporters">
+                                                            <attributes>
+                                                                <font key="NSFont" size="19" name="HelveticaNeue"/>
+                                                                <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="truncatingTail" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                            </attributes>
+                                                        </fragment>
+                                                    </attributedString>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default user photo" translatesAutoresizingMaskIntoConstraints="NO" id="Kuv-Uo-s4b" customClass="RoundedImageView" customModule="Museek" customModuleProvider="target">
+                                            <rect key="frame" x="142" y="52" width="90" height="90"/>
+                                            <gestureRecognizers/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="90" id="7WX-ln-fhd"/>
+                                                <constraint firstAttribute="width" constant="90" id="k0r-ju-P4B"/>
+                                            </constraints>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                    <real key="value" value="45"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                    <real key="value" value="2"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                    <color key="value" name="AppMain"/>
+                                                </userDefinedRuntimeAttribute>
+                                            </userDefinedRuntimeAttributes>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YU1-of-aqU">
+                                            <rect key="frame" x="138.66666666666666" y="152" width="98.333333333333343" height="22.666666666666657"/>
+                                            <attributedString key="attributedText">
+                                                <fragment content="[username]">
+                                                    <attributes>
+                                                        <font key="NSFont" size="19" name="HelveticaNeue-Medium"/>
+                                                        <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                    </attributes>
+                                                </fragment>
+                                            </attributedString>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="vRT-N3-PQf" firstAttribute="leading" secondItem="Kuv-Uo-s4b" secondAttribute="trailing" constant="25" id="4N8-Ov-REv"/>
+                                        <constraint firstItem="iG8-nA-0QG" firstAttribute="centerY" secondItem="Kuv-Uo-s4b" secondAttribute="centerY" id="Atb-EH-Slq"/>
+                                        <constraint firstItem="Kuv-Uo-s4b" firstAttribute="leading" secondItem="iG8-nA-0QG" secondAttribute="trailing" constant="25" id="OzV-L0-DTg"/>
+                                        <constraint firstItem="Kuv-Uo-s4b" firstAttribute="top" secondItem="72A-Kq-f7J" secondAttribute="topMargin" id="UG7-rM-3AE"/>
+                                        <constraint firstItem="YU1-of-aqU" firstAttribute="top" secondItem="Kuv-Uo-s4b" secondAttribute="bottom" constant="10" id="YNf-zc-IeR"/>
+                                        <constraint firstItem="vRT-N3-PQf" firstAttribute="centerY" secondItem="Kuv-Uo-s4b" secondAttribute="centerY" id="ZAZ-db-ZNo"/>
+                                        <constraint firstItem="Kuv-Uo-s4b" firstAttribute="centerX" secondItem="72A-Kq-f7J" secondAttribute="centerX" id="ptP-8l-ZRj"/>
+                                        <constraint firstItem="YU1-of-aqU" firstAttribute="centerX" secondItem="Kuv-Uo-s4b" secondAttribute="centerX" id="spq-mX-PuV"/>
+                                    </constraints>
+                                    <connections>
+                                        <outlet property="profileImage" destination="Kuv-Uo-s4b" id="ezg-os-A9O"/>
+                                        <outlet property="username" destination="YU1-of-aqU" id="qiR-QB-R0w"/>
+                                    </connections>
+                                </collectionReusableView>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="9P2-K2-LSr" secondAttribute="bottom" id="7zm-3l-xNi"/>
+                            <constraint firstItem="9P2-K2-LSr" firstAttribute="leading" secondItem="6n9-BV-7vw" secondAttribute="leading" id="azY-AO-wU1"/>
+                            <constraint firstItem="9P2-K2-LSr" firstAttribute="trailing" secondItem="6n9-BV-7vw" secondAttribute="trailing" id="eg2-Ix-2OG"/>
+                            <constraint firstItem="9P2-K2-LSr" firstAttribute="top" secondItem="eG6-sp-Eil" secondAttribute="top" id="uti-cg-P5m"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6n9-BV-7vw"/>
                     </view>
-                    <navigationItem key="navigationItem" title="[Username]" id="PVl-p6-vIA">
+                    <navigationItem key="navigationItem" id="PVl-p6-vIA">
                         <barButtonItem key="rightBarButtonItem" title="Logout" id="ncQ-5P-XCD">
                             <connections>
                                 <action selector="logoutButtonPressed:" destination="8g0-E8-Vab" id="tpt-Ig-Esq"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="collectionView" destination="9P2-K2-LSr" id="MsR-tq-cJc"/>
+                        <outlet property="navItem" destination="PVl-p6-vIA" id="6Sh-EY-gcC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ply-tg-UkG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="625" y="1346"/>
+            <point key="canvasLocation" x="624.79999999999995" y="1345.5665024630543"/>
         </scene>
         <!--Profile-->
         <scene sceneID="3CB-OS-K7L">
             <objects>
                 <navigationController storyboardIdentifier="NavProfile" title="Profile" automaticallyAdjustsScrollViewInsets="NO" id="u7x-Bq-dKz" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="profile" selectedImage="profile (filled)" id="WYg-Pd-83d"/>
+                    <tabBarItem key="tabBarItem" title="" image="profile" selectedImage="profile (filled)" id="WYg-Pd-83d">
+                        <inset key="imageInsets" minX="0.0" minY="5" maxX="0.0" maxY="-5"/>
+                    </tabBarItem>
                     <toolbarItems/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="JSq-aF-Xvu">
@@ -53,8 +198,12 @@
         </scene>
     </scenes>
     <resources>
+        <image name="default user photo" width="40" height="40"/>
         <image name="profile" width="25" height="25"/>
         <image name="profile (filled)" width="25" height="25"/>
+        <namedColor name="AppMain">
+            <color red="0.40799999240000001" green="0.40799999240000001" blue="0.40799999240000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
     <color key="tintColor" name="AppAccent"/>
 </document>
