--- a/Museek/Main/Discover/Discover.storyboard
+++ b/Museek/Main/Discover/Discover.storyboard
@@ -163,7 +163,6 @@
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default user photo" translatesAutoresizingMaskIntoConstraints="NO" id="4jb-zA-b4O" customClass="RoundedImageView" customModule="Museek" customModuleProvider="target">
                                             <rect key="frame" x="326" y="10" width="40" height="40"/>
                                             <userDefinedRuntimeAttributes>
-                                                <userDefinedRuntimeAttribute type="boolean" keyPath="view." value="YES"/>
                                                 <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                     <real key="value" value="20"/>
                                                 </userDefinedRuntimeAttribute>
@@ -283,6 +282,9 @@
         <image name="explore (filled)" width="25" height="25"/>
         <image name="fire" width="22" height="22"/>
         <image name="share" width="16" height="16"/>
+        <namedColor name="AppMain">
+            <color red="0.40799999237060547" green="0.40799999237060547" blue="0.40799999237060547" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="AppMain">
             <color red="0.40799999240000001" green="0.40799999240000001" blue="0.40799999240000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
